fix(frontend): adjust chart margins, avoid labels overlap

--- a/packages/frontend/src/components/create-campaign/form/kpi-step/styles.module.css
+++ b/packages/frontend/src/components/create-campaign/form/kpi-step/styles.module.css
@@ -43,5 +43,5 @@
 }
 
 .chartWrapper {
-    @apply flex flex-col gap-3;
+    @apply flex flex-col;
 }
